# arrow-test

./: README.md  ubuntu-22.04-cpp-minimal.dockerfile
code/: CMakeLists.txt
code/src/: main.cpp
scripts/: install_vcpkg_with_libs.sh
